feat: add new label service integration key DATATR-143
Signed-off-by: Alexandre Claveau <alexandre.claveau@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/service-integration/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/service-integration/add/add.html
@@ -65,6 +65,10 @@
             data-on-change="$ctrl.handleIntegrationChange(modelValue)"
             data-required
         >
+            <span data-ng-bind="$item.type"></span><br />
+            <small
+                data-translate="pci_databases_service_integration_{{$item.type.toLowerCase()}}"
+            ></small>
         </oui-select>
     </oui-field>
     <div class="row">
