--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -102,10 +102,10 @@
                 </oui-tile-definition>
 
                 <oui-button
-                    variant="primary"
-                    block
-                    on-click="$ctrl.upgradeStorage()"
-                    disabled="(($ctrl.flavor.minDiskSize + $ctrl.additionalDiskSize) <= $ctrl.database.disk.size) || $ctrl.upgradingStorage"
+                    data-variant="primary"
+                    data-block
+                    data-on-click="$ctrl.upgradeStorage()"
+                    data-disabled="(($ctrl.flavor.minDiskSize + $ctrl.additionalDiskSize) <= $ctrl.database.disk.size) || $ctrl.upgradingStorage"
                 >
                     <span
                         data-ng-if="!$ctrl.upgradingStorage"
