fix: pr comments
datatr-46

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -8,7 +8,7 @@
 </oui-back-button>
 <div class="row bm-4">
     <div class="col-lg-9">
-        <oui-message type="warning">
+        <oui-message data-type="warning">
             <span
                 data-translate="pci_databases_general_information_upgrade_storage_warning"
             ></span>
