fix: add margin
DATATR-46

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
@@ -522,7 +522,7 @@
                 <oui-tile-definition>
                     <oui-tile-description>
                         <div
-                            class="d-flex align-items-center justify-content-between"
+                            class="d-flex align-items-center justify-content-between mb-2"
                         >
                             <span
                                 data-translate="pci_database_add_price_unit_switch_label"
