fix: remove data prefix from block
DATATR-147

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -103,7 +103,7 @@
 
                 <oui-button
                     data-variant="primary"
-                    data-block
+                    block
                     data-on-click="$ctrl.upgradeStorage()"
                     data-disabled="(($ctrl.flavor.minDiskSize + $ctrl.additionalDiskSize) <= $ctrl.database.disk.size) || $ctrl.upgradingStorage"
                 >
