fix: wording and responsive
DATATR-150

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.html
@@ -534,7 +534,7 @@
                             >
                             </oui-switch>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between flex-wrap">
                             <span
                                 data-translate="pci_database_common_price"
                             ></span>
