--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/upgrade-storage.html
@@ -7,7 +7,7 @@
     ></span>
 </oui-back-button>
 <div class="row bm-4">
-    <div class="col-lg-9">
+    <div class="col-md-7 col-xl-9 mb-2">
         <oui-message data-type="warning">
             <span
                 data-translate="pci_databases_general_information_upgrade_storage_warning"
@@ -38,7 +38,7 @@
         >
         </pci-projects-project-database-disk-size>
     </div>
-    <div class="col-lg-3">
+    <div class="col-md-5 col-xl-3">
         <div class="order-summary sticky-top mb-3">
             <oui-tile
                 class="full-height"
