--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -137,7 +137,7 @@
                                             >
                                             </i>
                                             <span
-                                                class="text-warning"
+                                                class="text-danger"
                                                 data-ng-if="showEndOfLifeMessage(distribution.endOfInstall,true)"
                                                 data-ng-bind="distribution.endOfInstall | date:'mediumDate'"
                                             >
