feat(dedicated): remove select option for single dropdown
ref: MANAGER-10439

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -299,10 +299,16 @@
                             data-translate="server_configuration_installation_ovh_stephardraid_label_controllers"
                         >
                         </label>
+                        <span
+                            data-ng-if="informations.hardwareRaid.profile.controllers.length === 1"
+                            data-ng-bind="installation.hardwareRaid.controller.model + ' (' + installation.hardwareRaid.controller.type + ')'"
+                        >
+                        </span>
                         <select
                             class="form-control"
                             id="hardwareRaidController"
                             name="hardwareRaidController"
+                            data-ng-if="informations.hardwareRaid.profile.controllers.length !== 1"
                             data-ng-options="controller as (controller.model + ' (' + controller.type + ')') for controller in informations.hardwareRaid.profile.controllers"
                             data-ng-model="installation.hardwareRaid.controller"
                         >
@@ -334,11 +340,16 @@
                             data-translate="server_configuration_installation_ovh_stephardraid_label_disks"
                         >
                         </label>
+                        <span
+                            data-ng-if="informations.hardwareRaid.availableDisks.length === 1 && installation.hardwareRaid.raid"
+                            data-ng-bind="informations.hardwareRaid.availableDisks[0]"
+                        >
+                        </span>
                         <select
                             class="form-control"
                             id="hardwareRaidNbDisks"
                             name="hardwareRaidNbDisks"
-                            data-ng-if="installation.hardwareRaid.raid"
+                            data-ng-if="informations.hardwareRaid.availableDisks.length !== 1 && installation.hardwareRaid.raid"
                             data-ng-options="disk as disk for disk in informations.hardwareRaid.availableDisks"
                             data-ng-model="installation.hardwareRaid.disks"
                         >
@@ -352,11 +363,16 @@
                             data-translate="server_configuration_installation_ovh_stephardraid_label_arrays"
                         >
                         </label>
+                        <span
+                            data-ng-if="informations.hardwareRaid.availableArrays.length === 1 && installation.hardwareRaid.disks"
+                            data-ng-bind="informations.hardwareRaid.availableArrays[0]"
+                        >
+                        </span>
                         <select
                             id="hardwareaRidNbArrays"
                             class="form-control"
                             name="hardwareaRidNbArrays"
-                            data-ng-if="installation.hardwareRaid.disks"
+                            data-ng-if="informations.hardwareRaid.availableArrays.length !== 1 && installation.hardwareRaid.disks"
                             data-ng-model="installation.hardwareRaid.arrays"
                             data-ng-options="array as array for array in informations.hardwareRaid.availableArrays"
                         >
@@ -665,9 +681,14 @@
                                         data-translate="{{ 'server_configuration_installation_' + partition.fileSystem }}"
                                     >
                                     </span>
+                                    <span
+                                        data-ng-if="constants.fileSystemList.length === 1 && isSetPartition(partition) && partition.fileSystem != constants.warningSwap"
+                                        data-ng-bind="partition.fileSystem"
+                                    >
+                                    </span>
                                     <select
                                         class="form-control"
-                                        data-ng-if="isSetPartition(partition) && partition.fileSystem != constants.warningSwap"
+                                        data-ng-if="constants.fileSystemList.length !== 1 && isSetPartition(partition) && partition.fileSystem != constants.warningSwap"
                                         data-ng-options="fileSystem as ('server_configuration_installation_' + fileSystem | translate) for fileSystem in constants.fileSystemList"
                                         data-ng-model="partition.fileSystem"
                                         data-ng-change="validationFileSystem(partition)"
@@ -935,8 +956,14 @@
                                         'has-error': hasErrorFileSystem()
                                     }"
                                 >
+                                    <span
+                                        data-ng-if="constants.fileSystemList.length === 1"
+                                        data-ng-model="newPartition.fileSystem"
+                                    >
+                                    </span>
                                     <select
                                         class="form-control"
+                                        data-ng-if="constants.fileSystemList.length !== 1"
                                         data-ng-options="fileSystem as ('server_configuration_installation_' + fileSystem | translate) for fileSystem in constants.fileSystemList"
                                         data-ng-model="newPartition.fileSystem"
                                         data-ng-change="validationFileSystem(newPartition)"
