fix(public-cloud.privatenetwork): change the color for dhcp desactivate
ref: MANAGER-10429

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/private-networks/private-networks.html
+++ b/packages/manager/modules/pci/src/projects/project/private-networks/private-networks.html
@@ -166,7 +166,7 @@
                                         data-translate="pci_projects_project_network_private_dhcp_active"
                                     ></span>
                                     <span
-                                        class="oui-badge oui-badge_error"
+                                        class="oui-badge oui-badge_sold-out"
                                         data-ng-if="!$row.loading && !subnetDetail.dhcpEnabled"
                                         data-translate="pci_projects_project_network_private_dhcp_disabled"
                                     ></span>
