--- a/packages/manager/modules/vps/src/upscale/upscale.html
+++ b/packages/manager/modules/vps/src/upscale/upscale.html
@@ -237,7 +237,7 @@
             loading="$ctrl.loading.getUpscaleInformation"
             editable="!$ctrl.loading.performUpscale"
             prevent-next="true"
-            valid="$ctrl.agreeContracts"
+            valid="$ctrl.agreeContracts || ($ctrl.order.contracts.length === 0 && !$ctrl.agreements)"
         >
             <div data-ng-if="$ctrl.order">
                 <oui-checkbox
