fix(sign-up): fix some tracking on siret module
ref: MANAGER-8600

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sign-up/src/form/activity/activity.html
+++ b/packages/manager/modules/sign-up/src/form/activity/activity.html
@@ -143,6 +143,8 @@
             data-rules="$ctrl.signUpFormCtrl.rules"
             data-tracking-mode="'creation'"
             data-is-valid="$ctrl.signUpFormCtrl.isValid"
+            data-form-ctrl="$ctrl.formCtrl"
+            data-on-field-error="$ctrl.onFieldError"
         ></siret-component>
     </div>
 </div>
