feat(storage.cold-archive): add left margin for manageArchive btn
ref: MANAGER-10664
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -141,7 +141,7 @@
                 ></span>
             </button>
             <button
-                class="oui-button oui-button_primary"
+                class="oui-button oui-button_primary ml-sm-2"
                 data-ng-click="$ctrl.goToManageContainer()"
                 data-track-on="click"
                 data-track-name="PCI_PROJECTS_CONTAINERS_MANAGE"
