--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/add-user/add-user.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/add-user/add-user.html
@@ -21,12 +21,14 @@
                     data-model="$ctrl.selectedUser"
                 >
                     <div class="row">
-                        <div class="col-8 text-truncate"
-                             data-ng-bind=":: $item.addUserNameDescriptionKey"
+                        <div
+                            class="col-8 text-truncate"
+                            data-ng-bind=":: $item.addUserNameDescriptionKey"
                         ></div>
                         <div class="col-4">
-                            <small class="ml-4"
-                                   data-ng-bind=":: $item.credentialTrad"
+                            <small
+                                class="ml-4"
+                                data-ng-bind=":: $item.credentialTrad"
                             ></small>
                         </div>
                     </div>
@@ -36,7 +38,7 @@
         <div data-ng-if="$ctrl.addUserStep === 1">
             <p
                 data-translate="{{:: 'pci_projects_project_storages_coldArchive_containers_addUser_description_' + ($ctrl.objectKey ? 'object' : 'container') + '_step_1' }}"
-                data-translate-values="{ value: ($ctrl.objectKey ? $ctrl.objectKey : $ctrl.container.id)}"
+                data-translate-values="{ value: ($ctrl.objectKey ? $ctrl.objectKey : $ctrl.container.name)}"
             ></p>
             <oui-radio-group
                 model="$ctrl.selectedRole"
