--- a/packages/manager/modules/emailpro/src/domain/add/emailpro-domain-add.html
+++ b/packages/manager/modules/emailpro/src/domain/add/emailpro-domain-add.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="EmailProAddDomainController">
     <div
         data-wizard
-        data-wizard-on-cancel="resetAction"
+        data-wizard-on-cancel="closeModal"
         data-wizard-on-finish="addDomain"
         data-wizard-title="'emailpro_tab_domain_add_domain' | translate"
     >
