fix: pr comments
DATATR-155

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/training/jobs/submit/submit.html
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/submit/submit.html
@@ -148,7 +148,7 @@
                 <!--Settings restricted-->
                 <oui-select-picker
                     class="d-inline-block col-md-6 col-xl-3 my-3"
-                    data-name="privacyNetwork"
+                    data-name="privacyNetworkRestricted"
                     data-label="{{:: 'pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted' | translate}}"
                     data-model="$ctrl.job.privacy"
                     data-values="[$ctrl.PRIVACY_SETTINGS.RESTRICTED]"
@@ -163,7 +163,7 @@
                 <!--Settings public-->
                 <oui-select-picker
                     class="d-inline-block col-md-6 col-xl-3 my-3"
-                    data-name="rivacyNetwork"
+                    data-name="privacyNetworkPublic"
                     data-label="{{:: 'pci_projects_project_training_jobs_submit_select_privacy_settings_item_public' | translate}}"
                     data-model="$ctrl.job.privacy"
                     data-values="[$ctrl.PRIVACY_SETTINGS.PUBLIC]"
