fix(dedicated.cdn): fix background error message and empty error
ref: DTRSD-100092 DTRSD-100153

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/cdn/dedicated/manage/cdn-dedicated-manage.html
+++ b/packages/manager/apps/dedicated/client/app/cdn/dedicated/manage/cdn-dedicated-manage.html
@@ -34,7 +34,10 @@
             data-ng-class="alertType"
             data-ng-if="message"
         >
-            <i class="close icon-remove" data-ng-click="message = null"></i>
+            <i
+                class="close icon-remove"
+                data-ng-click="$ctrl.$scope.message = null"
+            ></i>
             <span data-ng-bind="message"></span>
         </div>
 
