Sync master develop
Signed-off-by: Anoop N <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/containers/container/addUser/addUser.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/container/addUser/addUser.html
@@ -21,12 +21,14 @@
                     data-model="$ctrl.selectedUser"
                 >
                     <div class="row">
-                        <div class="col-8 text-truncate"
-                             data-ng-bind=":: $item.addUserNameDescriptionKey"
+                        <div
+                            class="col-8 text-truncate"
+                            data-ng-bind=":: $item.addUserNameDescriptionKey"
                         ></div>
                         <div class="col-4">
-                            <small class="ml-4"
-                                   data-ng-bind=":: $item.credentialTrad"
+                            <small
+                                class="ml-4"
+                                data-ng-bind=":: $item.credentialTrad"
                             ></small>
                         </div>
                     </div>
