feat(storage.cold-archive): pr fixes
ref: MANAGER-10675
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/flush-archive/flush-archive.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/flush-archive/flush-archive.html
@@ -1,5 +1,5 @@
 <oui-modal
-    data-heading="{{ $ctrl.getHeadingContent() | translate }}"
+    data-heading="{{ 'pci_projects_project_storages_containers_container_cold_archive_flush_title' | translate }}"
     data-primary-action="$ctrl.flushArchive()"
     data-primary-label="{{:: 'pci_projects_project_storages_containers_container_cold_archive_flush_submit_label' | translate }}"
     data-primary-disabled="$ctrl.isLoading || !$ctrl.terminateConfirmation || $ctrl.container.status === $ctrl.COLD_ARCHIVE_CONTAINER_STATUS.NONE"
@@ -8,11 +8,14 @@
     data-secondary-label="{{:: 'pci_projects_project_storages_containers_container_cold_archive_flush_cancel_label' | translate }}"
     data-loading="$ctrl.isLoading"
 >
-    <oui-message data-type="warning"
-        ><span
-            data-translate="pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning"
+    <oui-message data-type="warning">
+        <span
+            data-translate="pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning_1"
             data-translate-values="{ containerName: $ctrl.container.name, objetsCount: $ctrl.container.objectsCount }"
         ></span>
+        <p
+            data-translate="pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning_2"
+        ></p>
     </oui-message>
     <oui-field
         data-label="{{:: 'pci_projects_project_storages_containers_container_cold_archive_flush_terminate_input_label' | translate }}"
