--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/delete-container.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/delete-container.html
@@ -1,5 +1,5 @@
 <oui-modal
-    data-heading="{{ $ctrl.getHeadingContent() | translate }}"
+    data-heading="{{ 'pci_projects_project_storages_containers_container_cold_archive_delete_title' | translate }}"
     data-primary-action="$ctrl.deleteContainer()"
     data-primary-label="{{:: 'pci_projects_project_storages_containers_container_cold_archive_delete_submit_label' | translate }}"
     data-primary-disabled="$ctrl.isLoading || !$ctrl.terminateConfirmation || ($ctrl.container.status === $ctrl.COLD_ARCHIVE_CONTAINER_STATUS.NONE && $ctrl.container.objectsCount)"
@@ -10,9 +10,13 @@
 >
     <oui-message data-ng-if="$ctrl.container.objectsCount" data-type="warning"
         ><span
-            data-translate="pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_archived_or_restored_warning"
-            data-translate-values="{ containerName: $ctrl.container.name, objetsCount: $ctrl.container.objectsCount, docUrl: $ctrl.getDocumentationUrl() }"
+            data-translate="pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1"
+            data-translate-values="{ containerName: $ctrl.container.name, objetsCount: $ctrl.container.objectsCount }"
         ></span>
+        <p
+            data-translate="pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2"
+            data-translate-values="{ docUrl: $ctrl.getDocumentationUrl() }"
+        ></p>
     </oui-message>
     <div data-ng-if="!$ctrl.container.objectsCount">
         <p
