feat(storage.cold-archive): update tracking for containers actions
ref: MANAGER-9194
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/add-user/add-user.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/add-user/add-user.html
@@ -1,6 +1,6 @@
 <oui-modal
     data-heading="{{ ::'pci_projects_project_storages_coldArchive_containers_addUser_' + ($ctrl.objectKey ? 'object' : 'container') + '_title' | translate }}"
-    data-on-dismiss="$ctrl.goBack()"
+    data-on-dismiss="$ctrl.cancel()"
     data-loading="$ctrl.isLoading"
 >
     <div data-ng-if="$ctrl.container">
