fix: ssl and backup translations
Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
@@ -57,7 +57,7 @@
             data-filterable
         >
             <span
-                data-ng-bind="$ctrl.ovhManagerRegionService.getTranslatedMacroRegion($row.region)"
+                data-ng-bind="$row.region ? $ctrl.ovhManagerRegionService.getTranslatedMacroRegion($row.region) : '-'"
             ></span>
         </oui-datagrid-column>
         <oui-datagrid-column
