--- a/packages/manager/apps/dedicated/client/app/license/license.html
+++ b/packages/manager/apps/dedicated/client/app/license/license.html
@@ -127,7 +127,7 @@
                     ></span>
                 </oui-action-menu-item>
                 <oui-action-menu-item
-                    data-ng-if="$row.isExpired"
+                    data-ng-if="$row.isExpired && canRenewLicense($row.type)"
                     href="{{ getRenewUrl() + $row.id }}"
                     top
                     ><span
